Correct polygon splitting in an almost-coplanar case.

In the case described in the associated bug, the signs of the vertices
of the quad to be split are [ 0 0 + - ], which means that floating
point rounding has resulted in a polygon that is not flat. Originally
one of the two points that lies on the splitting plane was not being
included in either output polygon, which caused the result to be
incorrect.

This corrects the case when two consecutive points are on the splitting
plane.

BUG=693826
CQ_INCLUDE_TRYBOTS=master.tryserver.blink:linux_trusty_blink_rel

Review-Url: https://codereview.chromium.org/2714243002
Cr-Commit-Position: refs/heads/master@{#453888}

Former-commit-id: 02a3371e8aa5f5ec354509e3625371cbf6f81707